Fix spacing between Full stack and intro

--- a/src/components/intro/landing_page.module.scss
+++ b/src/components/intro/landing_page.module.scss
@@ -12,5 +12,5 @@
   font-family: $font_family;
   font-size: 4rem;
   font-weight: $font_weight;
-  margin: 0;
+  margin-top: 4rem;
 }
